# basis

./: .gitignore  CMakeLists.txt  Doxyfile  notes.txt  readme.txt
SRC/basis_control/: CMakeLists.txt  basiscontrol.cpp  basiscontrol.h
SRC/basis_modules/aquacontroller/: CMakeLists.txt  aquacontroller.cpp  aquacontroller.h  button.cpp  button.h
SRC/basis_modules/aquacontroller/aqua_sketch/: aqua_sketch.ino
SRC/basis_modules/dummy/: CMakeLists.txt  dummy.cpp  dummy.h
SRC/basis_modules/module_dummy/: CMakeLists.txt  dummy.cpp  dummy.h
SRC/basis_modules/neuro/: CMakeLists.txt  README.txt  neuro.cpp  neuro.h
SRC/basis_modules/neuroviewer/: CMakeLists.txt  README.txt  neuroviewer.cpp  neuroviewer.h
SRC/basis_modules/observer/: CMakeLists.txt  README.txt  observer.cpp  observer.h
SRC/basis_sdk/: CMakeLists.txt  basis.cpp  basis.h  basis_private.h  basis_test.cpp  basis_test.h  iterable.cpp  iterable.h  iterables.cpp  iterables.h
SRC/basis_workplace/: CMakeLists.txt  consolerw.cpp  consolerw.h  main.cpp
SRC/control/: CMakeLists.txt  README.txt
SRC/modules/aquacontroller/: CMakeLists.txt  aquacontroller.cpp  aquacontroller.h
SRC/modules/aquacontroller/aqua_sketch/: aqua_sketch.ino
SRC/modules/base_io_windows/: CMakeLists.txt  base_io_windows.cpp  base_io_windows.h  consolereader.cpp  consolereader.h
SRC/modules/communicator/: CMakeLists.txt  communicator.cpp  communicator.h  readme.txt
SRC/modules/console/: CMakeLists.txt
SRC/modules/dummy/: CMakeLists.txt  dummy.cpp
SRC/modules/neuro/: CMakeLists.txt  neuro.cpp  neuro.h
SRC/modules/neuroviewer/: CMakeLists.txt  neuroviewer.cpp  neuroviewer.h
SRC/modules/observer/: CMakeLists.txt  observer.cpp
SRC/modules/observer/imgui/: imgui.h
SRC/sdk/: CMakeLists.txt  basis.cpp  basis.h  basis_private.h  basis_test.cpp  iterable.cpp
SRC/tests/: main.cpp
SRC/workplace/: CMakeLists.txt  consolerw.cpp  consolerw.h  main.cpp
SRC/workplace/resources/: resources.qrc
TOOLS/: aqua_debug.bss  neuro.bss
TOOLS/sfml/lib/Debug/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-system-d.lib  sfml-window-d-2.ilk  sfml-window-d.exp  sfml-window-d.lib
include/: basis.h
src/core/: CMakeLists.txt  basis.cpp  basis_private.h  basis_test.cpp  readme.txt
src/modules/: readme.txt
src/modules/communicator/: CMakeLists.txt  communicator.cpp  communicator.h
src/modules/dummy/: dummy.cpp  dummy.h
src/tests/: CMakeLists.txt  readme.txt
src/workplace/: consolerw.cpp  main.cpp  readme.txt
